@@ -3,6 +3,9 @@
 	* common/miscutil/hostlist.[ch]: Update to version from pdsh to
 	eliminate compiler warnings.
 
+	* common/miscutil/fi_hostlist.c: Fix some compiler warnings,
+	copying style fix from hostlist.c.
+
 2023-08-27 Albert Chu <chu11@llnl.gov>
 
 	* configure.ac: fix warning by moving AC_USE_SYSTEM_EXTENSIONS
